--- a/main/conf/config.yml
+++ b/main/conf/config.yml
@@ -1,18 +1,19 @@
-emb-size: 5 # 100 - Glove
-hidden-size: 5 # 200
+emb-size: 2 # 100 - Glove
+hidden-size: 2 # 200
 
 max-enc-steps: 1000
 max-dec-steps: 100
+
 vocab-file: main/resource/vocab.txt
 
 mode: train
 
-training:
+train:
   tf: 0.25
   lr: 0.0001
   rl-weight: 0.9984
   epoch: 1
-  batch-size: 3
+  batch-size: 2
   article-file: data/train/article.txt
   summary-file: data/train/summary.txt
   vocab-file: data/train/vocab.txt
