--- a/main/conf/config.yml
+++ b/main/conf/config.yml
@@ -10,8 +10,9 @@ train:
   tf: 0.25
   lr: 0.0001
   rl-weight: 0.9984
-  epoch: 1
+  epoch: 10
   batch-size: 2
   article-file: data/train/article.txt
   summary-file: data/train/summary.txt
   vocab-file: data/train/vocab.txt
+  model-file: data/train/model.ckpt
