--- a/main/conf/config.yml
+++ b/main/conf/config.yml
@@ -9,15 +9,15 @@ model-file: data/train/model.ckpt
 
 train:
   learning_rate: 0.0001
-  clip_gradient_max_norm: 0.25
+  clip_gradient_max_norm: 1
   forcing_ratio: 1
   forcing_decay: 0.05
   rl_transit_epoch: -1
   rl_transit_decay: 0
   rl-weight: 0.7
-  epoch: 100
-  batch-size: 30
-  log_batch: False
+  epoch: 200
+  batch-size: 20
+  log_batch: false
   article-file: data/train/article.txt
   summary-file: data/train/summary.txt
   vocab-file: data/train/vocab.bin
