--- a/main/conf/config.yml
+++ b/main/conf/config.yml
@@ -8,16 +8,17 @@ vocab-file: data/train/vocab.bin
 model-file: data/train/model.ckpt
 
 train:
-  learning_rate: 0.0001
-  clip_gradient_max_norm: 1
-  forcing_ratio: 1
-  forcing_decay: 0.05
-  rl_transit_epoch: -1
-  rl_transit_decay: 0
+  lr: 0.01
+  lr-decay-epoch: 25
+  clip-gradient-max-norm: 1
+  forcing-ratio: 0.90
+  forcing-decay: 0.05
+  rl-transit-epoch: -1
+  rl-transit-decay: 0
   rl-weight: 0.7
-  epoch: 200
+  epoch: 75
   batch-size: 20
-  log_batch: false
+  log-batch: false
   article-file: data/train/article.txt
   summary-file: data/train/summary.txt
   vocab-file: data/train/vocab.bin
