--- a/main/conf/config.yml
+++ b/main/conf/config.yml
@@ -4,31 +4,33 @@ hidden-size: 50 # 200
 max-enc-steps: 100
 max-dec-steps: 100
 
-vocab-file: data/train/vocab.bin
-model-file: data/train/model.ckpt
+vocab-size: 50000
+vocab-file: data/extract/giga-vocab.txt
+
+model-file: data/extract/giga-model.ckpt
 
 train:
-  epoch: 75
-  batch-size: 20
-  log-batch: false
+  epoch: 2
+  batch-size: 30
+  log-batch: true
   clip-gradient-max-norm: 1
 
-  lr: 0.01
-  lr-decay: 0.9
-  lr-decay-epoch: 25
+  lr: 0.0001
+  lr-decay: 1
+  lr-decay-epoch: 10
 
   ml:
     enable: true
-    forcing-ratio: 0.90
-    forcing-decay: 0.05
+    forcing-ratio: 1
+    forcing-decay: 0
   rl:
     enable: false
     transit-epoch: -1
     transit-decay: 0
     weight: 0.9984
 
-  article-file: data/train/article.txt
-  summary-file: data/train/summary.txt
-  vocab-file: data/train/vocab.bin
+  article-file: data/extract/giga-article.txt
+  summary-file: data/extract/giga-summary.txt
+  vocab-file: data/extract/giga-vocab.txt
   emb-file: data/extract/embedding
-  save-model-file: data/train/model.ckpt
+  save-model-file: data/extract/giga-model.ckpt
