--- a/main/conf/config.yml
+++ b/main/conf/config.yml
@@ -10,14 +10,14 @@ vocab-file: data/extract/giga-vocab.txt
 model-file: data/extract/giga-model.ckpt
 
 train:
-  epoch: 2
-  batch-size: 30
+  epoch: 100
+  batch-size: 20
   log-batch: true
   clip-gradient-max-norm: 1
 
   lr: 0.0001
-  lr-decay: 1
-  lr-decay-epoch: 10
+  lr-decay: 0.1
+  lr-decay-epoch: 40
 
   ml:
     enable: true
@@ -30,7 +30,9 @@ train:
     weight: 0.9984
 
   article-file: data/extract/giga-article.txt
+  #article-file: data/extract/train.article.txt
   summary-file: data/extract/giga-summary.txt
+  #summary-file: data/extract/train.title.txt
   vocab-file: data/extract/giga-vocab.txt
   emb-file: data/extract/embedding
   save-model-file: data/extract/giga-model.ckpt
