--- a/main/conf/logging.yml
+++ b/main/conf/logging.yml
@@ -12,12 +12,31 @@ handlers:
     formatter: simple
     stream: ext://sys.stdout
 
+  debug_file_handler:
+      class: logging.handlers.RotatingFileHandler
+      level: DEBUG
+      formatter: simple
+      filename: ../logs/debug.log
+      maxBytes: 10485760 # 10MB
+      backupCount: 20
+      encoding: utf8
+
+  error_file_handler:
+    class: logging.handlers.RotatingFileHandler
+    level: ERROR
+    formatter: simple
+    filename: ../logs/errors.log
+    maxBytes: 10485760 # 10MB
+    backupCount: 20
+    encoding: utf8
+
 loggers:
-  sampleLogger:
+  main:
     level: DEBUG
     handlers: [console]
     propagate: no
 
 root:
   level: DEBUG
-  handlers: [console]
+  handlers: [console, debug_file_handler, error_file_handler]
+  propagate: yes
