--- a/main/conf/logging.yml
+++ b/main/conf/logging.yml
@@ -13,19 +13,19 @@ handlers:
     stream: ext://sys.stdout
 
   debug_file_handler:
-      class: logging.handlers.RotatingFileHandler
-      level: DEBUG
-      formatter: simple
-      filename: ../logs/debug.log
-      maxBytes: 10485760 # 10MB
-      backupCount: 20
-      encoding: utf8
+    class: logging.handlers.RotatingFileHandler
+    level: DEBUG
+    formatter: simple
+    filename: ${PROJ_HOME}/logs/debug.log
+    maxBytes: 10485760 # 10MB
+    backupCount: 20
+    encoding: utf8
 
   error_file_handler:
     class: logging.handlers.RotatingFileHandler
     level: ERROR
     formatter: simple
-    filename: ../logs/errors.log
+    filename: ${PROJ_HOME}/logs/errors.log
     maxBytes: 10485760 # 10MB
     backupCount: 20
     encoding: utf8
@@ -33,7 +33,6 @@ handlers:
 loggers:
   main:
     level: DEBUG
-    handlers: [console]
     propagate: no
 
 root:
